--- a/theme/page/dashboard.less
+++ b/theme/page/dashboard.less
@@ -82,6 +82,23 @@
 }
 
 #card_switchports {
+
+    .ndm-switchport {
+        &__label {
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        &__sfp-icon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-top: 8px;
+            padding-bottom: 2px;
+        }
+    }
+
     .socket__wrap {
         filter: brightness(0.7);
     }
