(fix) theme/page/../devicesList.less: fix icon color for RX/TX arrows

--- a/theme/page/controlPanel/myNetwork/devicesList.less
+++ b/theme/page/controlPanel/myNetwork/devicesList.less
@@ -28,6 +28,11 @@
         .via-mws-msg {
             color: @dt__grey9;
         }
+
+        .icon.icon--txbytes-arrow,
+        .icon.icon--rxbytes-arrow {
+            .__mixin__convert-color-to-dt__white-text();
+        }
     }
 
     .__hint-text {
