(chore) theme/..: add styles for the 'ndm-mws-nodes' component

--- a/theme/theme-3.x.less
+++ b/theme/theme-3.x.less
@@ -61,6 +61,7 @@
 @import "component/ndm-menu-3_x-gray";
 //@import "component/ndm-menu-3_x";
 @import "component/ndm-modal";
+@import "component/ndm-mws-nodes";
 @import "component/ndm-page";
 @import "component/ndm-policy-select";
 @import "component/ndm-popup-small";
