(fix) theme/component/ndm-schedule-select: fix schedule thumb colors

--- a/theme/component/ndm-schedule-select.less
+++ b/theme/component/ndm-schedule-select.less
@@ -12,4 +12,23 @@
             color: @dt__light-blue-text !important;
         }
     }
+
+    .ndm-schedule-thumb {
+        background-color: @dt__grey6;
+        padding: 8px 6px 0 6px;
+        width: fit-content;
+        position: relative;
+        top: -3px;
+        left: -3px;
+
+        &--svg-container {
+            background-color: unset;
+            margin-top: -4px;
+
+            &--background {
+                fill: @dt__grey8;
+                transform: translate(0, -4px);
+            }
+        }
+    }
 }
