(chore) theme/component/ndm-schedule-select: decrease schedule thumb brightness

--- a/theme/__vars__.less
+++ b/theme/__vars__.less
@@ -1,7 +1,7 @@
 @import (reference) "__ndwVars__";
 
 @dt__white-text: #D4D7D6;
-@dt_gray-text: #a4a7a6;
+@dt__gray-text: #a4a7a6;
 @dt__whiter-text: #eaedec;
 
 @dt__blue-text: lighten(#519ABA, 3%);
