--- a/theme/theme-general.less
+++ b/theme/theme-general.less
@@ -74,7 +74,7 @@ th {
 }
 
 .body-text {
-    color: @dt_gray-text !important;
+    color: @dt__gray-text !important;
 }
 
 .empty-list {
@@ -104,5 +104,5 @@ th {
 }
 
 .form__cell-note {
-    color: @dt_gray-text;
+    color: @dt__gray-text;
 }
