(fix) theme/component/ndm-schedule-select: fix component overall height when the selectbox is open

--- a/theme/component/ndm-schedule-select.less
+++ b/theme/component/ndm-schedule-select.less
@@ -2,6 +2,12 @@
 @import (reference) "../__mixins__";
 
 .ndm-schedule-select {
+    position: relative;
+
+    &__thumb-container {
+        position: absolute;
+        width: 100%;
+    }
 
     &__selectbox-container {
         ul li:last-child * {
