(fix) theme/component/ndm-schedule-select: fix thumb container width

--- a/theme/component/ndm-schedule-select.less
+++ b/theme/component/ndm-schedule-select.less
@@ -6,7 +6,7 @@
 
     &__thumb-container {
         position: absolute;
-        width: 100%;
+        width: fit-content;
     }
 
     &__selectbox-container {
