(chore) add styles for the 'Application Traffic Analyzer' page

--- a/theme/theme-3.x.less
+++ b/theme/theme-3.x.less
@@ -26,6 +26,8 @@
 @import "page/controlPanel/telephony/lines";
 @import "page/controlPanel/telephony/callHistory";
 
+@import "page/controlPanel/status/applicationTrafficAnalyzer";
+
 @import "page/controlPanel/apps";
 
 @import "page/tools/cli";
@@ -67,6 +69,7 @@
 @import "component/ndm-popup-small";
 @import "component/ndm-ports-range";
 @import "component/ndm-radio";
+@import "component/ndm-radio-buttons";
 @import "component/ndm-schedule-draw";
 @import "component/ndm-schedule-select";
 @import "component/ndm-selectbox";
