(chore) app/pages/options: add 'Replace textarea cursor' checkbox

--- a/theme/extensionOptions.less
+++ b/theme/extensionOptions.less
@@ -13,6 +13,15 @@
     width: 100%;
 }
 
+.replace-textarea-cursor-form {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: @new-gap-sm;
+    margin-bottom: @new-gap-sm;
+}
+
 .switchport-template-form {
     margin-top: 40px;
     width: 100%;
