(fix) theme/page/../diagnostics.less: fix icon color for RX/TX arrows

--- a/theme/page/controlPanel/control/diagnostics.less
+++ b/theme/page/controlPanel/control/diagnostics.less
@@ -84,4 +84,11 @@
             }
         }
     }
+
+    .ndm-list {
+        .icon.icon--txbytes-arrow,
+        .icon.icon--rxbytes-arrow {
+            filter: invert(1);
+        }
+    }
 }
