(fix) hide 'Diagnostics -> DSL' link from the menu if UI extensions are disabled

--- a/theme/hideUiExtensions-general.less
+++ b/theme/hideUiExtensions-general.less
@@ -2,6 +2,7 @@
 .devices-list-toolbar,
 .log-link,
 .reboot-link,
+.dsl-diagnostics-link,
 a[href="/controlPanel/diagnostics/log"],
 .vpn-stat-link,
 .save-log-btn {
