--- a/theme/page/controlPanel/myInternet/otherConnections.less
+++ b/theme/page/controlPanel/myInternet/otherConnections.less
@@ -24,6 +24,26 @@
             color: @dt__white-text;
         }
     }
+
+    .page-point-to-point {
+        &__table {
+            td.table__col-0 {
+                width: 40% !important;
+
+                .td-content-wrapper {
+                    overflow: auto;
+                }
+
+                .ndm-toggle {
+                    .toggle-text {
+                        display: inline-block !important;
+                        height: @line-height * 2;
+                        overflow-y: initial;
+                    }
+                }
+            }
+        }
+    }
 }
 
 .wireguard-editor {
