(fix) uiExtension/pointToPointTunnelsSection: hide section if 'UI extensions' toggle is disabled

--- a/theme/hideUiExtensions-general.less
+++ b/theme/hideUiExtensions-general.less
@@ -3,6 +3,7 @@
 .log-link,
 .reboot-link,
 .dsl-diagnostics-link,
+.point-to-point-section,
 a[href="/controlPanel/diagnostics/log"],
 .vpn-stat-link,
 .save-log-btn {
