(chore) group additonal DSL stats by mode (fast/interleaved)

--- a/theme/uiExtensions-3.x.less
+++ b/theme/uiExtensions-3.x.less
@@ -3,3 +3,4 @@
 @import "uiExtensions/wifiClients-filters";
 @import "uiExtensions/deviceList-filters";
 @import "uiExtensions/dashboard-vpn-stat-links";
+@import "uiExtensions/extend-dsl-stats";
