(chore) add styles for the new IntelliQos page (3.x)

--- a/theme/theme-3.x.less
+++ b/theme/theme-3.x.less
@@ -20,6 +20,7 @@
 @import "page/controlPanel/myNetwork/segments";
 @import "page/controlPanel/myNetwork/trafficMonitor";
 @import "page/controlPanel/myNetwork/wifiSystem-3_x";
+@import "page/controlPanel/myNetwork/intelliqos";
 
 @import "page/controlPanel/networkRules/netFilter";
 
