--- a/theme/extensionOptions.less
+++ b/theme/extensionOptions.less
@@ -1,4 +1,5 @@
 @import (reference) "__ndwVars__";
+@import (reference) "__vars__";
 
 .options-page {
     display: flex;
@@ -20,6 +21,112 @@
     align-items: center;
     margin-top: @new-gap-sm;
     margin-bottom: @new-gap-sm;
+}
+
+.switchports-template-editor {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+
+    h4 {
+        text-align: center;
+        height: 32px;
+    }
+
+    ul {
+        padding: 0;
+        list-style-type: none;
+    }
+
+    &__available,
+    &__selected {
+        li {
+            cursor: pointer;
+            display: block;
+            padding: .75rem 1.25rem;
+            min-width: 120px;
+            background-color: #eee;
+            border: 1px solid @new-blue;
+            text-align: center;
+        }
+    }
+
+    &__selected,
+    &__trash {
+        margin-left: 20px;
+    }
+
+    &__trash {
+        width: 100px;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+
+        &-wrapper {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            position: relative;
+        }
+
+        #trash {
+            border: 2px dotted @red;
+            flex: 1;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        &-icon-wrapper {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .trash-placeholder {
+            opacity: 0;
+        }
+    }
+
+    &__preview {
+        margin-left: @new-gap-md;
+        padding: 0 @new-gap-sm;
+        display: flex;
+        flex-direction: column;
+
+        .preview__contents {
+            flex: 1;
+            width: 58px;
+            box-sizing: border-box;
+            background-color: @dt__grey7;
+            padding-top: @new-unit;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            color: @dt__white-text;
+        }
+
+        .preview__icon {
+            position: relative;
+        }
+
+        .preview__port-id {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: @dt__blue-text;
+            font-size: 14px;
+            line-height: 18px;
+            font-family: Roboto,sans-serif;
+        }
+    }
 }
 
 .switchport-template-form {
