(chore) theme: overrid 'toaster-js' toast position, add styles for the extended switchport status data wrapper

--- a/theme/extensionOptions.less
+++ b/theme/extensionOptions.less
@@ -25,6 +25,18 @@
     & + & {
         margin-left: @new-gap-lg;
     }
+
+    &--red {
+        background-color: @dt__dark-red;
+    }
+
+    &--wide {
+        width: 100%;
+    }
+}
+
+.toast.displayed {
+    transform: translate(0, -95vh) !important;
 }
 
 .buttons-row {
