--- a/theme/uiExtensions-general.less
+++ b/theme/uiExtensions-general.less
@@ -1,4 +1,5 @@
 @import (reference) "__vars__";
+@import (reference) "__mixins__";
 
 .__hidden {
     display: none !important;
@@ -38,4 +39,13 @@
     min-height: 0 !important;
     opacity: 0 !important;
     height: 0 !important;
+}
+
+.extended-switchport-status {
+    .__mixin__flex-container();
+
+    margin-top: 4px;
+    min-height: 36px;
+    text-align: center;
+    flex: 1;
 }
