(chore) uiExtension/extendSystemSwitchportData: do not query 'show interface stat' if UI extensions are off

--- a/theme/hideUiExtensions-general.less
+++ b/theme/hideUiExtensions-general.less
@@ -6,6 +6,7 @@
 .point-to-point-section,
 a[href="/controlPanel/diagnostics/log"],
 .vpn-stat-link,
+.extended-switchport-status,
 .save-log-btn {
     display: none !important;
 }
