--- a/theme/extensionOptions.less
+++ b/theme/extensionOptions.less
@@ -1,9 +1,51 @@
 @import (reference) "__ndwVars__";
+@import (reference) "__vars__";
+@import (reference) "__mixins__";
+
+.button {
+    background-color: @new-blue;
+    border: 0;
+    color: #fff;
+    font-weight: 600;
+    line-height: 1;
+    margin-top: 1.5rem;
+    padding: 12px;
+    border-radius: 4px;
+    cursor: pointer;
+
+    &:hover {
+        background: @new-blue-dark;
+    }
+
+    &:focus {
+        outline: none;
+        box-shadow: 0 0 0 4px #cbd6ee;
+    }
+
+    & + & {
+        margin-left: @new-gap-lg;
+    }
+
+    &--red {
+        background-color: @dt__dark-red;
+    }
+
+    &--wide {
+        width: 100%;
+    }
+}
+
+.toast.displayed {
+    transform: translate(0, -95vh) !important;
+}
+
+.buttons-row {
+    .__mixin__flex-container(row);
+}
 
 .options-page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    .__mixin__flex-container();
+
     width: 50%;
     margin: 0 auto;
     min-width: 300px;
@@ -14,21 +56,135 @@
 }
 
 .replace-textarea-cursor-form {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    .__mixin__flex-container(row);
+
     margin-top: @new-gap-sm;
     margin-bottom: @new-gap-sm;
 }
 
-.switchport-template-form {
-    margin-top: 40px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+.switchports-template {
+    .__mixin__flex-container(column, flex-start);
+}
 
-    & > textarea {
+.switchports-template-editor {
+    .__mixin__flex-container(row);
+
+    align-items: stretch;
+
+    h4 {
+        text-align: center;
+        height: 32px;
+    }
+
+    ul {
+        padding: 0;
+        list-style-type: none;
+    }
+
+    &__available,
+    &__selected {
+        li {
+            cursor: pointer;
+            display: block;
+            padding: .75rem 1.25rem;
+            min-width: 120px;
+            background-color: #eee;
+            border: 1px solid @new-blue;
+            text-align: center;
+        }
+    }
+
+    &__selected,
+    &__trash {
+        margin-left: 20px;
+    }
+
+    &__trash {
+        .__mixin__flex-container();
+
+        width: 100px;
+        position: relative;
+
+        &-wrapper {
+            .__mixin__flex-container();
+
+            flex: 1;
+            position: relative;
+        }
+
+        #trash {
+            .__mixin__flex-container(row);
+
+            border: 2px dotted @red;
+            flex: 1;
+            justify-content: center;
+        }
+
+        &-icon-wrapper {
+            .__mixin__flex-center();
+
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        }
+
+        .trash-placeholder {
+            opacity: 0;
+        }
+    }
+
+    &__preview {
+        margin-left: @new-gap-lg;
+        padding: 0 @new-gap-sm;
+        display: flex;
+        flex-direction: column;
+
+        .preview__contents {
+            flex: 1;
+            width: 72px;
+            box-sizing: border-box;
+            background-color: @dt__grey7;
+            padding-top: @new-unit;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            color: @dt__white-text;
+        }
+
+        .preview__icon {
+            position: relative;
+        }
+
+        .preview__port-id {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: @dt__blue-text;
+            font-size: 14px;
+            line-height: 18px;
+            font-family: Roboto,sans-serif;
+        }
+    }
+}
+
+.switchport-template-form {
+    .__mixin__flex-container();
+
+    margin-top: 40px;
+
+    details {
+        width: 100%;
+    }
+
+    summary {
+        font-family: @main-font;
+        font-size: 14px;
+    }
+
+    textarea {
         margin: 10px 0 10px 0;
         width: 100%;
     }
