(chore) scripts/options: append 'wide' class to the 'ndm-switchport' root element if any TX/RX property is selected

--- a/theme/component/ndm-switchport.less
+++ b/theme/component/ndm-switchport.less
@@ -1,6 +1,13 @@
 @import (reference) "../__vars__";
 
 ndm-switchport {
+
+    &.wide {
+        .ndm-switchport {
+            min-width: 66px;
+        }
+    }
+
     .ndm-switchport__label {
         color: @dt__blue-text;
     }
