(fix) properly display extended info for switchports in a link group (dashboard)

--- a/theme/component/ndm-switchport.less
+++ b/theme/component/ndm-switchport.less
@@ -8,6 +8,21 @@ ndm-switchport {
         }
     }
 
+    &.wide--group {
+        .ndm-switchport.ndm-switchport--combo {
+            min-width: 150px;
+
+            .ndm-switchport__wrapper:not(.ndm-switchport__wrapper--sfp) {
+                padding: 0 12px 0 16px;
+                justify-content: space-between
+            }
+
+            .ndm-switchport__inner {
+                margin: 0;
+            }
+        }
+    }
+
     .ndm-switchport__label {
         color: @dt__blue-text;
     }
