(feat.) 'Device lists': show 'WoL' button next to an offline registered host name

--- a/theme/uiExtensions-2.x.less
+++ b/theme/uiExtensions-2.x.less
@@ -1,3 +1,4 @@
 @import "uiExtensions-general";
 @import "uiExtensions/wifiClients-filters";
+@import "uiExtensions/deviceList-wol-button";
 @import "uiExtensions/deviceList-filters";
