--- a/theme/uiExtensions-3.x.less
+++ b/theme/uiExtensions-3.x.less
@@ -2,5 +2,6 @@
 @import "uiExtensions/menu-links.less";
 @import "uiExtensions/wifiClients-filters";
 @import "uiExtensions/deviceList-filters";
+@import "uiExtensions/deviceList-wol-button";
 @import "uiExtensions/dashboard-vpn-stat-links";
 @import "uiExtensions/extend-dsl-stats";
