--- a/theme/hideUiExtensions-general.less
+++ b/theme/hideUiExtensions-general.less
@@ -7,6 +7,7 @@
 a[href="/controlPanel/diagnostics/log"],
 .vpn-stat-link,
 .extended-switchport-status,
+button.btn.wol-button,
 .save-log-btn {
     display: none !important;
 }
