(chore) pages/options: add notice on MT7628-based devices port statistics

--- a/theme/extensionOptions.less
+++ b/theme/extensionOptions.less
@@ -64,6 +64,10 @@
 
 .switchports-template {
     .__mixin__flex-container(column, flex-start);
+
+    &__info-notice {
+        max-width: 600px;
+    }
 }
 
 .switchports-template-editor {
