(feat.) implement 'ip lookup' section & 'routes toolbar' section

--- a/theme/hideUiExtensions-general.less
+++ b/theme/hideUiExtensions-general.less
@@ -11,3 +11,17 @@ button.btn.wol-button,
 .save-log-btn {
     display: none !important;
 }
+
+.page-static-routes {
+    ._static-routes {
+        th.table__col--checkbox,
+        td.table__col--checkbox {
+            display: none !important;
+        }
+    }
+
+    .routes-ip-lookup,
+    .routes-toolbar {
+        display: none !important;
+    }
+}
