--- a/theme/uiExtensions-3.x.less
+++ b/theme/uiExtensions-3.x.less
@@ -5,3 +5,4 @@
 @import "uiExtensions/deviceList-wol-button";
 @import "uiExtensions/dashboard-vpn-stat-links";
 @import "uiExtensions/extend-dsl-stats";
+@import "uiExtensions/routes-tools";
