(chore) add dark theme styles for the 'Signal levels' popup

--- a/theme/page/controlPanel/myInternet/modems.less
+++ b/theme/page/controlPanel/myInternet/modems.less
@@ -5,3 +5,11 @@
         color: @dt__white-text;
     }
 }
+
+.modems-signal-gauges {
+    .antenna__title,
+    .carrier__title,
+    .signal-info-data__label {
+        color: @dt__white-text;
+    }
+}
