--- a/theme/theme-3.x.less
+++ b/theme/theme-3.x.less
@@ -52,6 +52,7 @@
 @import "component/ndm-eula";
 @import "component/ndm-feature-notice";
 @import "component/ndm-fs-browser";
+@import "component/ndm-gauge";
 @import "component/ndm-iface-order";
 @import "component/ndm-input-3.x.less";
 @import "component/ndm-input-autocomplete";
