(fix) IPIP/GRE/EoIP: modify editor template to match the 3.7B web UI

--- a/theme/page/controlPanel/myInternet/otherConnections.less
+++ b/theme/page/controlPanel/myInternet/otherConnections.less
@@ -24,26 +24,10 @@
             color: @dt__white-text;
         }
     }
+}
 
-    .page-point-to-point {
-        &__table {
-            td.table__col-0 {
-                width: 40% !important;
-
-                .td-content-wrapper {
-                    overflow: auto;
-                }
-
-                .ndm-toggle {
-                    .toggle-text {
-                        display: inline-block !important;
-                        height: @line-height * 2;
-                        overflow-y: initial;
-                    }
-                }
-            }
-        }
-    }
+.point-to-point-editor__description {
+    color: @dt__white-text;
 }
 
 .wireguard-editor {
