--- a/theme/uiExtensions-3.x.less
+++ b/theme/uiExtensions-3.x.less
@@ -6,3 +6,4 @@
 @import "uiExtensions/dashboard-vpn-stat-links";
 @import "uiExtensions/extend-dsl-stats";
 @import "uiExtensions/routes-tools";
+@import "uiExtensions/point-to-point-section";
