(fix) theme/uiExtensions/deviceList-filters, deviceList-wol-button: fix style for offline devices @ mobile

--- a/theme/uiExtensions/deviceList-filters.less
+++ b/theme/uiExtensions/deviceList-filters.less
@@ -39,4 +39,10 @@
             });
         }
     }
+
+    .mobile({
+        .table_devices-list tr.hidden-table-row {
+            display: flex;
+        }
+    });
 }
