--- a/theme/uiExtensions/deviceList-wol-button.less
+++ b/theme/uiExtensions/deviceList-wol-button.less
@@ -14,6 +14,12 @@ button.btn.wol-button {
     }
 }
 
-.page-devices-list .table_devices-list tbody td.table__col--2 {
-    margin-top: 7px;
+.page-devices-list .table_devices-list tbody {
+    td.table__col--2 {
+        margin-top: 7px;
+    }
+
+    .inactive-device .overflow-transperent {
+        width: calc(100% - 70px);
+    }
 }
