--- a/theme/uiExtensions/point-to-point-section.less
+++ b/theme/uiExtensions/point-to-point-section.less
@@ -41,8 +41,17 @@
     &__delete-panel {
         padding-bottom: 150px;
     }
+}
 
+.point-to-point-editor__popup {
     .invalid-field {
+        border: 2px solid red;
+
+        .sb-toggle {
+            background-color: red !important;
+        }
+
+        .sb-container .sb-toggle,
         .ndm-selectbox2__toggle {
             border-color: @new-red;
         }
