--- a/theme/page/controlPanel/apps.less
+++ b/theme/page/controlPanel/apps.less
@@ -120,5 +120,9 @@
         .icon.icon--device {
             filter: invert(0.9);
         }
+
+        .ndm-tooltip__content {
+            background-color: @dt__grey4;
+        }
     }
 }
