(fix) theme/.../point-to-point-section.less: fix 'Local source' input style

--- a/theme/uiExtensions/point-to-point-section.less
+++ b/theme/uiExtensions/point-to-point-section.less
@@ -45,15 +45,12 @@
 
 .point-to-point-editor__popup {
     .invalid-field {
-        border: 2px solid red;
-
-        .sb-toggle {
-            background-color: red !important;
-        }
-
-        .sb-container .sb-toggle,
-        .ndm-selectbox2__toggle {
+        .dropdown .sb-container .sb-toggle {
             border-color: @new-red;
+
+            &:focus {
+                border-color: @new-red !important;
+            }
         }
     }
 }
