(feat.) uiExtension/filterDeviceLists: add filter input

--- a/theme/hideUiExtensions-general.less
+++ b/theme/hideUiExtensions-general.less
@@ -8,6 +8,7 @@ a[href="/controlPanel/diagnostics/log"],
 .vpn-stat-link,
 .extended-switchport-status,
 button.btn.wol-button,
+.devices-lists-input-filter,
 .save-log-btn {
     display: none !important;
 }
