--- a/theme/page/controlPanel/myNetwork/devicesList.less
+++ b/theme/page/controlPanel/myNetwork/devicesList.less
@@ -5,6 +5,8 @@
     .ndm-title.tretiary-title {
         position: relative;
 
+        @filters-toolbar-height-mobile: 70px;
+
         .tablet-and-laptop({
             height: 35px;
 
@@ -17,9 +19,17 @@
 
         .mobile({
             &.__filters-are-visible {
-                height: 70px;
+                height: @filters-toolbar-height-mobile;
             }
         });
+
+        &[label="devices-list.registered-devices.header"] {
+            .mobile({
+                &.__filters-are-visible {
+                    height: @filters-toolbar-height-mobile + 40px;
+                }
+            });
+        }
     }
 
     .table-devices-list {
