--- a/theme/uiExtensions/deviceList-filters.less
+++ b/theme/uiExtensions/deviceList-filters.less
@@ -42,7 +42,7 @@
         margin-left: 14px;
         margin-right: -14px;
         position: relative;
-        top: 5px;
+        top: 4px;
 
         .mobile({
             position: absolute;
@@ -62,11 +62,11 @@
         .ndm-input-filter__input {
             height: @filter-input-height;
             font-size: 14px;
-            padding: @new-unit @input-horizontal-padding;
+            padding: 9px @input-horizontal-padding 10px @input-horizontal-padding;
             border-radius: 4px;
 
             &:focus {
-                padding: (@new-unit - 1px) (@input-horizontal-padding - 1px);
+                padding: 8px (@input-horizontal-padding - 1px) 9px (@input-horizontal-padding - 1px);
             }
         }
 
