(chore) fix filter input style

--- a/theme/uiExtensions/deviceList-filters.less
+++ b/theme/uiExtensions/deviceList-filters.less
@@ -77,6 +77,7 @@
         margin-right: 8px;
         position: relative;
         top: 4px;
+        width: @form-element-label-width;
 
         .mobile({
             position: absolute;
@@ -84,6 +85,7 @@
             padding-top: 0;
             left: -8px;
             margin-left: 8px;
+            width: auto;
         });
 
         @input-horizontal-padding: 22px;
