(chore) pages/ui/wifi-clients: add templates for clients list filters/filters toggle

--- a/theme/hideUiExtensions-general.less
+++ b/theme/hideUiExtensions-general.less
@@ -1,5 +1,6 @@
 .show-filter-checkboxes,
-.devices-list-toolbar,
+.kdte-filters-toggle,
+.kdte-filters-toolbar,
 .log-link,
 .reboot-link,
 .dsl-diagnostics-link,
@@ -8,7 +9,6 @@ a[href="/controlPanel/diagnostics/log"],
 .vpn-stat-link,
 .extended-switchport-status,
 button.btn.wol-button,
-.devices-lists-input-filter,
 .save-log-btn {
     display: none !important;
 }
