--- a/theme/uiExtensions/wifiClients-filters.less
+++ b/theme/uiExtensions/wifiClients-filters.less
@@ -12,7 +12,7 @@
         padding-left: 24px;
     }
 
-    .devices-list-toolbar { // theme-specific
+    .kdte-filters-toolbar { // theme-specific
         display: flex;
         flex-direction: row;
         width: 100%;
@@ -48,7 +48,7 @@
 
 .ndm-layout:not(.ndm-layout--dark-theme) {
     .page-wifiClients {
-        .devices-list-toolbar{
+        .kdte-filters-toolbar{
             background-color: @white;
         }
     }
