--- a/theme/uiExtensions-general.less
+++ b/theme/uiExtensions-general.less
@@ -116,6 +116,8 @@
         });
 
         .form__cell-note {
+            min-width: unset;
+            font-size: 13px;
             color: @dt__white-text !important;
         }
     }
