(chore) theme/: fix search input style for >= 3.7.x firmware

--- a/theme/__vars__.less
+++ b/theme/__vars__.less
@@ -1,5 +1,7 @@
 @import (reference) "__ndwVars__";
 
+@dt__header-background: #11364d;
+
 @dt__white-text: #D4D7D6;
 @dt__gray-text: #a4a7a6;
 @dt__whiter-text: #eaedec;
