--- a/theme/component/ndm-layout.less
+++ b/theme/component/ndm-layout.less
@@ -1,8 +1,9 @@
 // NDMS >= 3.0
+@import (reference) "../__vars__";
 
 .ndm-layout {
     .d-header {
-        background-color: #11364d;
+        background-color: @dt__header-background;
 
         .search__form {
             button {
