--- a/theme/theme-3.x.less
+++ b/theme/theme-3.x.less
@@ -60,6 +60,7 @@
 @import "component/ndm-input-drop";
 @import "component/ndm-input-file";
 @import "component/ndm-input-filter";
+@import "component/ndm-header-3.x.less";
 @import "component/ndm-help";
 @import "component/ndm-layout";
 @import "component/ndm-menu-3_x-gray";
