--- a/theme/component/ndm-header-3.x.less
+++ b/theme/component/ndm-header-3.x.less
@@ -10,6 +10,10 @@
             .search__input {
                 background: @dt__grey6;
 
+                .mobile({
+                    background-color: transparent;
+                });
+
                 &--active,
                 &:active,
                 &:focus {
