(fix) theme/.../system.less: fix components section description text color

--- a/theme/page/controlPanel/control/system.less
+++ b/theme/page/controlPanel/control/system.less
@@ -41,6 +41,10 @@
             }
         }
 
+        .components-section__components__description {
+            color: @dt__white-text;
+        }
+
         .firmware-update-check,
         .firmware-update-info,
         .no-firmware-updates {
