--- a/theme/component/ndm-header-3.7.40.less
+++ b/theme/component/ndm-header-3.7.40.less
@@ -7,6 +7,10 @@
         &__right-column {
             background-color: @dt__header-background;
 
+            .search__icon {
+                z-index: 1;
+            }
+
             .search__input {
                 background: @dt__grey6;
 
