(chore) theme/.../ndm-switchport-select.less: fix toggle element background-color in the ':focus' state

--- a/theme/component/ndm-switchport-select.less
+++ b/theme/component/ndm-switchport-select.less
@@ -14,6 +14,10 @@
     &__toggle {
         box-shadow: none !important;
 
+        &:focus {
+            background-color: @dt__grey7;
+        }
+
         &--active {
             background-color: @dt__grey6;
         }
