(chore) theme/...: update styles for the 'Internet safety' page

--- a/theme/theme-3.x.less
+++ b/theme/theme-3.x.less
@@ -22,7 +22,8 @@
 @import "page/controlPanel/myNetwork/wifiSystem-3_x";
 @import "page/controlPanel/myNetwork/intelliqos";
 
-@import "page/controlPanel/networkRules/netFilter";
+@import "page/controlPanel/networkRules/netFilter"; // < 3.8
+@import "page/controlPanel/networkRules/internetFilter"; // >= 3.8
 
 @import "page/controlPanel/telephony/lines";
 @import "page/controlPanel/telephony/callHistory";
